# ProgLangs

Task1/: CMakeLists.txt  main.c  py_widgets.cpp  py_widgets_classes.cpp  widgets.cpp  widgets.h  widgets_defs.h  widgets_help.cpp
Task2/: table.html  tableWorker.js
Task4/: README.md  rebar.config
Task4/apps/bmp_encryption/.rebar/: erlcinfo
Task4/apps/bmp_encryption/include/: image_rec.hrl
Task4/apps/bmp_encryption/src/: bmp_encryption.app.src  bmp_encryption_app.erl  bmp_encryption_handler.erl  bmp_encryption_sup.erl  bmp_enctyption.erl  bmp_image.erl  rest_bmp_encryption.erl
Task4/rel/: reltool.config
Task4/rel/files/: bmp_encryption.cmd  vm.args
